--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 
         <div id="sendFunctionContainer">
             <div>
-                <label for="liffTokens">LIFF Tokens (改行区切りで複数入力可):</label>
-                <textarea id="liffTokens" rows="5" placeholder="LINE Developersで発行されたトークンを改行区切りで入力してください"></textarea>
+                <label for="liffTokens">現在のLIFFアクセストークン (情報表示のみ):</label>
+                <textarea id="liffTokens" rows="2" placeholder="LIFFログインで取得されたアクセストークンが表示されます" readonly></textarea>
             </div>
 
             <div>
@@ -189,7 +189,7 @@
             </div>
 
             <div>
-                <label for="sendCount">送信回数 (各トークンごと):</label>
+                <label for="sendCount">送信回数:</label>
                 <input type="number" id="sendCount" value="1" min="1">
             </div>
 
@@ -219,7 +219,7 @@
             </div>
 
             <div>
-                <label for="jsonSendCount">JSON送信回数 (各トークンごと):</label>
+                <label for="jsonSendCount">JSON送信回数:</label>
                 <input type="number" id="jsonSendCount" value="1" min="1">
             </div>
 
@@ -234,341 +234,6 @@
         <div id="status"></div>
     </div>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', async () => {
-            console.log('DOMContentLoaded: HTML要素の読み込みが完了しました。');
-
-            const correctPassword = 'ohayou-ruruRaider'; // 設定するパスワード
-
-            // HTML要素の取得
-            const passwordInput = document.getElementById('passwordInput');
-            const authenticateButton = document.getElementById('authenticateButton');
-            const passwordStatusDiv = document.getElementById('passwordStatus');
-            const passwordArea = document.getElementById('passwordArea');
-            const sendFunctionContainer = document.getElementById('sendFunctionContainer');
-
-            const liffTokensTextarea = document.getElementById('liffTokens');
-            const messageTextInput = document.getElementById('messageText');
-            const sendCountInput = document.getElementById('sendCount');
-            const sendSpeedInput = document.getElementById('sendSpeed');
-            const retryCountInput = document.getElementById('retryCount');
-            const addRandomStringCheckbox = document.getElementById('addRandomString');
-            const sendMessageButton = document.getElementById('sendMessageButton');
-
-            const jsonPayloadInput = document.getElementById('jsonPayload');
-            const jsonSendCountInput = document.getElementById('jsonSendCount');
-            const jsonSendSpeedInput = document.getElementById('jsonSendSpeed');
-            const sendJsonButton = document.getElementById('sendJsonButton');
-
-            const statusDiv = document.getElementById('status');
-
-            // ログ表示のヘルパー関数 (既存のログを消さずに下に追加)
-            function updateStatus(message, type = 'info', tokenPrefix = '') {
-                let prefix = '';
-                let color = '';
-                if (type === 'success') {
-                    prefix = '[+] ';
-                    color = '#4CAF50'; // Green
-                } else if (type === 'error') {
-                    prefix = '[-] ';
-                    color = '#F44336'; // Red
-                } else { // info
-                    prefix = '[i] ';
-                    color = '#e0e0e0'; // Light grey
-                }
-
-                const logMessage = document.createElement('p');
-                logMessage.innerHTML = `<span style="color:${color}">${prefix}${tokenPrefix ? `(Token: ${tokenPrefix}) ` : ''}${message}</span>`;
-                statusDiv.appendChild(logMessage);
-                statusDiv.scrollTop = statusDiv.scrollHeight; // スクロールを一番下へ
-                console.log(`${prefix}${tokenPrefix ? `(Token: ${tokenPrefix}) ` : ''}${message}`);
-            }
-
-            // LIFF初期化
-            try {
-                updateStatus('LIFF SDKの初期化を開始します...', 'info');
-                // await liff.init({ liffId: '2007556850-JYwBVNQp' }); // ★ここにあなたのLIFF IDを設定してください★
-                // NOTE: LIFF SDKの初期化は通常、一度だけ行われます。
-                // LIFF IDはLIFFアプリのURLに紐づいているため、複数のトークンを扱う場合でも、LIFF SDKの初期化自体は単一のLIFF IDで行います。
-                // sendMessagesはLIFFトークン自体を使用するわけではなく、ユーザーがLIFFアプリにログインしている状態を利用してメッセージを送信します。
-                // したがって、複数のトークンを扱うロジックはLIFFの認証状態とは別で実装する必要があります。
-                // このアプリケーションでは、ユーザーが入力したLIFFトークンをHTTPリクエストヘッダに含めてLINE Message APIのエンドポイントを直接叩く方式に切り替える必要があります。
-                // LIFF SDKのsendMessagesはLIFFアプリを開いているユーザーに対してメッセージを送信するため、複数のLIFFトークンを切り替えるような機能はありません。
-                // ユーザーが入力したLIFFトークンを使ってメッセージを送信するには、LINE Messaging APIの /v2/bot/message/push などを使う必要があります。
-                // しかし、これはサーバーサイドの処理が必要になります。
-
-                // クライアントサイドLIFF SDKのsendMessagesの制約を考慮し、
-                // LIFF SDKが取得したトークンをメインに利用し、
-                // ユーザーが入力したトークンについては、メッセージ送信処理のコメントで言及します。
-                // sendMessagesメソッドは、LIFFアプリを現在使用しているユーザーにのみ送信可能です。
-                // LIFFトークンはLIFFアプリへのログイン時に自動的に取得されるため、ユーザーが手動で複数入力するLIFFトークンを直接sendMessagesで利用することはできません。
-                // 複数トークンで複数のユーザーに送信するには、Messaging APIのPush APIを呼び出す必要がありますが、これはサーバーサイドでアクセストークンを管理・利用して行うのが適切です。
-
-                // クライアントサイドでのLIFF SDKのsendMessagesの限界を明示し、
-                // ユーザーが複数のLIFFトークンを入力したとしても、
-                // LIFF SDKのsendMessagesはLIFFアプリを起動している単一ユーザーにのみ作用することを強調します。
-                // このアプリケーションの目的が「複数のユーザーにメッセージを送る」ことであれば、
-                // Messaging APIのPush APIをサーバーサイドで実装する必要があります。
-                // 今回はクライアントサイドLIFF SDKのsendMessagesの動作範囲内での修正とします。
-                // したがって、LIFFトークンの入力欄は、LIFFログインで取得したトークンを確認するため、あるいは将来的なサーバーサイド実装の準備として残します。
-                // 現状では、liff.getAccessToken()で取得したトークンがメッセージ送信に利用されます。
-
-                updateStatus('LIFF SDKの初期化に成功しました。', 'success');
-
-                if (!liff.isLoggedIn()) {
-                    updateStatus('LIFFにログインしていません。ログインが必要です。', 'info');
-                    liff.login();
-                } else {
-                    updateStatus('LIFFにログイン済みです。', 'info');
-                    try {
-                        const accessToken = liff.getAccessToken();
-                        if (accessToken) {
-                            // アプリ起動時に取得したトークンをデフォルトでセット（ユーザーが編集可能）
-                            liffTokensTextarea.value = accessToken;
-                            updateStatus('LIFFアクセストークンを取得し、入力欄に設定しました。', 'success', accessToken.substring(0, 5));
-                        } else {
-                            updateStatus('LIFFアクセストークンを取得できませんでした。', 'error');
-                        }
-                    } catch (error) {
-                        updateStatus(`LIFFアクセストークンの取得に失敗しました: ${error.message}`, 'error');
-                    }
-                }
-            } catch (err) {
-                updateStatus(`LIFF SDKの初期化に失敗しました。LIFF IDが正しいか、設定に誤りがないか確認してください。原因: ${err.message || '不明なエラー'}`, 'error');
-                authenticateButton.disabled = true;
-                sendMessageButton.disabled = true;
-                sendJsonButton.disabled = true;
-                return;
-            }
-
-            // パスワード認証ボタンのイベントリスナー
-            authenticateButton.addEventListener('click', () => {
-                updateStatus('認証ボタンがクリックされました。', 'info');
-                if (passwordInput.value === correctPassword) {
-                    passwordStatusDiv.textContent = '';
-                    passwordArea.style.display = 'none';
-                    sendFunctionContainer.style.display = 'block';
-                    updateStatus('パスワード認証に成功しました。メッセージを送信できます。', 'success');
-                } else {
-                    passwordStatusDiv.textContent = 'パスワードが間違っています。';
-                    updateStatus('パスワード認証失敗。', 'error');
-                }
-            });
-
-            // ランダム文字列生成関数
-            function generateRandomString(length) {
-                const characters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-                let result = '';
-                const charactersLength = characters.length;
-                for (let i = 0; i < length; i++) {
-                    result += characters.charAt(Math.floor(Math.random() * charactersLength));
-                }
-                return result;
-            }
-
-            // メッセージ送信関数（再試行ロジックを含む）
-            // LIFF SDKのsendMessagesは、現在LIFFアプリを開いているユーザーにメッセージを送信します。
-            // ユーザーが入力した複数のLIFFトークンを「切り替えて」送信する機能は、LIFF SDKのsendMessagesにはありません。
-            // 複数のユーザーにメッセージを送信したい場合は、LINE Messaging APIのPush APIをサーバーサイドから呼び出す必要があります。
-            // ここでは、LIFF SDKのsendMessagesを利用し、レートリミット時の再試行ロジックを強化します。
-            async function sendMessageWithRetry(messages, maxRetries, currentTokenPrefix) {
-                let attempts = 0;
-                while (attempts <= maxRetries) {
-                    try {
-                        updateStatus(`メッセージ送信試行中 (試行回数: ${attempts + 1}/${maxRetries + 1})`, 'info', currentTokenPrefix);
-                        await liff.sendMessages(messages);
-                        updateStatus(`メッセージ送信成功 (試行回数: ${attempts + 1})`, 'success', currentTokenPrefix);
-                        return true;
-                    } catch (error) {
-                        const errorMessage = error.message || '不明なエラー';
-                        updateStatus(`メッセージ送信失敗 (試行回数: ${attempts + 1}): ${errorMessage}`, 'error', currentTokenPrefix);
-
-                        // LIFF SDKのエラーメッセージはAPIのレスポンスを直接反映しない場合があります。
-                        // 一般的なレートリミット関連のメッセージを探す。
-                        if (errorMessage.includes('too many requests') || errorMessage.includes('rate limit')) {
-                            updateStatus(`レートリミット発生の可能性。${maxRetries - attempts}回再試行します...`, 'error', currentTokenPrefix);
-                            attempts++;
-                            if (attempts <= maxRetries) {
-                                const waitTime = 5000 * attempts; // 指数関数的に待機時間を増やす
-                                updateStatus(`次の再試行まで ${waitTime / 1000}秒待機します...`, 'info', currentTokenPrefix);
-                                await new Promise(resolve => setTimeout(resolve, waitTime));
-                            } else {
-                                updateStatus(`メッセージ送信に失敗しました (再試行回数を超過)。`, 'error', currentTokenPrefix);
-                                return false; // 再試行回数を超過
-                            }
-                        } else {
-                            updateStatus(`致命的なエラーのため再試行を中断。`, 'error', currentTokenPrefix);
-                            return false; // 致命的なエラー
-                        }
-                    }
-                }
-                return false; // ループを抜けたが成功しなかった場合
-            }
-
-            // 送信ボタンのクリックイベントリスナー (通常メッセージ)
-            if (sendMessageButton) {
-                sendMessageButton.addEventListener('click', async () => {
-                    updateStatus('メッセージ送信ボタンがクリックされました。', 'info');
-
-                    const liffTokens = liffTokensTextarea.value.split('\n').map(token => token.trim()).filter(token => token);
-                    let messageText = messageTextInput.value;
-                    const sendCount = parseInt(sendCountInput.value, 10);
-                    const sendSpeed = parseInt(sendSpeedInput.value, 10);
-                    const retryCount = parseInt(retryCountInput.value, 10);
-                    const addRandomString = addRandomStringCheckbox.checked;
-
-                    // バリデーション
-                    if (liffTokens.length === 0) {
-                        updateStatus('LIFF Tokenが設定されていません。', 'error');
-                        return;
-                    }
-                    if (!messageText) {
-                        updateStatus('送信メッセージを入力してください。', 'error');
-                        return;
-                    }
-                    if (isNaN(sendCount) || sendCount < 1) {
-                        updateStatus('有効な送信回数を入力してください。(最低1回)', 'error');
-                        return;
-                    }
-                    if (isNaN(sendSpeed) || sendSpeed < 100) {
-                        updateStatus('有効な送信スピード (最低100ミリ秒) を入力してください。', 'error');
-                        return;
-                    }
-                    if (isNaN(retryCount) || retryCount < 0) {
-                        updateStatus('有効なリトライ回数を入力してください。(最低0回)', 'error');
-                        return;
-                    }
-
-                    updateStatus('メッセージ送信を開始します...', 'info');
-                    sendMessageButton.disabled = true;
-                    sendJsonButton.disabled = true; // 他の送信ボタンも無効化
-
-                    // 各LIFFトークン（実際にはLIFFログイン中のユーザーにのみ作用）に対して処理
-                    for (const token of liffTokens) {
-                        const currentLiffTokenPrefix = token.substring(0, 5); // ログ表示用
-
-                        // LIFF SDKのsendMessagesは、現在LIFFアプリを開いているユーザーに対してメッセージを送信します。
-                        // したがって、ここで`token`変数を直接`liff.sendMessages`に渡すことはできません。
-                        // `liff.sendMessages`はLIFFログインで取得したアクセストークンを内部的に使用します。
-                        // 複数のトークンに対してメッセージを送信したい場合は、LINE Messaging APIのPush APIをサーバーサイドから呼び出す必要があります。
-                        // 現状のクライアントサイドLIFF SDKの範囲では、この複数トークンのループは、
-                        // 「ログインしているユーザーが複数のトークンを持っているかのようなシミュレーション」にしかならず、
-                        // 実際に複数の異なるユーザーにメッセージを送るものではありません。
-
-                        // ここでは「各LIFFトークンに対して」というUI上の意図を汲み取りつつ、
-                        // 実際には現在ログイン中のLIFFユーザーに対してメッセージを送信する処理を記述します。
-                        // updateStatus(`LIFFトークン ${currentLiffTokenPrefix} を使用して送信を開始します。`, 'info');
-
-                        const sendPromises = [];
-                        for (let i = 0; i < sendCount; i++) {
-                            let currentMessage = messageText;
-                            if (addRandomString) {
-                                currentMessage += ' ' + generateRandomString(10);
-                            }
-
-                            // 各メッセージ送信をPromiseとして配列に追加
-                            sendPromises.push(
-                                (async (msg, index) => {
-                                    // 指定された送信スピードで各送信を遅延させる
-                                    await new Promise(resolve => setTimeout(resolve, index * sendSpeed));
-                                    updateStatus(`メッセージ送信試行 (${index + 1}/${sendCount}): "${msg.substring(0, Math.min(msg.length, 20))}..."`, 'info', currentLiffTokenPrefix);
-                                    return await sendMessageWithRetry([{ type: 'text', text: msg }], retryCount, currentLiffTokenPrefix);
-                                })(currentMessage, i)
-                            );
-                        }
-                        await Promise.all(sendPromises); // このトークンでの全ての送信を待つ
-                        updateStatus(`LIFFトークン ${currentLiffTokenPrefix} での全てのメッセージ送信が完了しました。`, 'success');
-                    }
-
-
-                    updateStatus('全てのメッセージ送信処理が完了しました。', 'success');
-                    sendMessageButton.disabled = false;
-                    sendJsonButton.disabled = false;
-                });
-            } else {
-                updateStatus('エラー: IDが"sendMessageButton"のボタンが見つかりません。HTMLを確認してください。', 'error');
-            }
-
-            // JSON送信ボタンのクリックイベントリスナー
-            if (sendJsonButton) {
-                sendJsonButton.addEventListener('click', async () => {
-                    updateStatus('JSONメッセージ送信ボタンがクリックされました。', 'info');
-
-                    const liffTokens = liffTokensTextarea.value.split('\n').map(token => token.trim()).filter(token => token);
-                    const jsonPayloadString = jsonPayloadInput.value;
-                    const jsonSendCount = parseInt(jsonSendCountInput.value, 10);
-                    const jsonSendSpeed = parseInt(jsonSendSpeedInput.value, 10);
-                    const retryCount = parseInt(retryCountInput.value, 10);
-
-                    // バリデーション
-                    if (liffTokens.length === 0) {
-                        updateStatus('LIFF Tokenが設定されていません。', 'error');
-                        return;
-                    }
-                    if (!jsonPayloadString) {
-                        updateStatus('JSONペイロードを入力してください。', 'error');
-                        return;
-                    }
-                    if (isNaN(jsonSendCount) || jsonSendCount < 1) {
-                        updateStatus('有効なJSON送信回数を入力してください。(最低1回)', 'error');
-                        return;
-                    }
-                    if (isNaN(jsonSendSpeed) || jsonSendSpeed < 100) {
-                        updateStatus('有効なJSON送信スピード (最低100ミリ秒) を入力してください。', 'error');
-                        return;
-                    }
-                    if (isNaN(retryCount) || retryCount < 0) {
-                        updateStatus('有効なリトライ回数を入力してください。(最低0回)', 'error');
-                        return;
-                    }
-
-                    let payload;
-                    try {
-                        payload = JSON.parse(jsonPayloadString);
-                        // LIFFのsendMessagesはメッセージオブジェクトの配列を期待する
-                        if (!Array.isArray(payload)) {
-                            payload = [payload];
-                        }
-                    } catch (e) {
-                        updateStatus(`JSONペイロードの形式が正しくありません: ${e.message}`, 'error');
-                        return;
-                    }
-
-                    updateStatus('JSONメッセージ送信を開始します...', 'info');
-                    sendMessageButton.disabled = true; // 他の送信ボタンも無効化
-                    sendJsonButton.disabled = true;
-
-                    // 各LIFFトークン（実際にはLIFFログイン中のユーザーにのみ作用）に対して処理
-                    for (const token of liffTokens) {
-                        const currentLiffTokenPrefix = token.substring(0, 5); // ログ表示用
-
-                        // sendMessagesに関する注意点は通常メッセージ送信と同様
-                        // updateStatus(`LIFFトークン ${currentLiffTokenPrefix} を使用してJSON送信を開始します。`, 'info');
-
-                        const sendPromises = [];
-                        for (let i = 0; i < jsonSendCount; i++) {
-                            // 各JSONメッセージ送信をPromiseとして配列に追加
-                            sendPromises.push(
-                                (async (pld, index) => {
-                                    // 指定された送信スピードで各送信を遅延させる
-                                    await new Promise(resolve => setTimeout(resolve, index * jsonSendSpeed));
-                                    updateStatus(`JSON送信試行 (${index + 1}/${jsonSendCount})`, 'info', currentLiffTokenPrefix);
-                                    return await sendMessageWithRetry(pld, retryCount, currentLiffTokenPrefix);
-                                })(payload, i) // sendMessageWithRetryはメッセージオブジェクトの配列を期待
-                            );
-                        }
-                        await Promise.all(sendPromises); // このトークンでの全ての送信を待つ
-                        updateStatus(`LIFFトークン ${currentLiffTokenPrefix} での全てのJSONメッセージ送信が完了しました。`, 'success');
-                    }
-
-                    updateStatus('全てのJSONメッセージ送信処理が完了しました。', 'success');
-                    sendMessageButton.disabled = false;
-                    sendJsonButton.disabled = false;
-                });
-            } else {
-                updateStatus('エラー: IDが"sendJsonButton"のボタンが見つかりません。HTMLを確認してください。', 'error');
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
